# workie

./: .env.sample  .gitignore  Cargo.toml  README.md
migrations/2018-11-09-111302_users/: up.sql
migrations/2018-11-09-111514_tasks/: up.sql
reactjs/: package.json
reactjs/public/: index.html
reactjs/src/: App.js  actions.js  axios.js  index.js  reducer.js
reactjs/src/components/: Navigation.js  SettingsConfirmation.js  TaskList.js  TaskListItem.js  VTextField.js
reactjs/src/views/: Home.js  Login.js  Settings.js  SignUp.js
src/: extractors.rs  lib.rs  main.rs  result.rs  routes.rs  schema.rs
src/model/: mod.rs  task.rs  user.rs
vue/: README.md  package.json
vue/public/: index.html
vue/src/: App.vue  main.js  router.js  store.js  validations.js
vue/src/components/: PasswordConfirmation.vue  TaskList.vue  TaskListItem.vue
vue/src/views/: Home.vue  Login.vue  Settings.vue  SignUp.vue
