[package]
name = "workie-backend"
version = "0.1.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.13.0"
failure = "0.1.3"
bcrypt = "0.2.1"
actix-web = "0.7.13"
env_logger = "0.5.13"
futures = "0.1.25"
serde = { version = "1.0.80", features = ["derive"] }
chrono = { version = "0.4.6", features = ["serde"] }
validator = "0.8.0"
validator_derive = "0.8.0"
serde_json = "1.0.33"
